add and remove photos to and from alerts
